--- a/odin-project/css/about.css
+++ b/odin-project/css/about.css
@@ -204,9 +204,12 @@ p {
 }
 
 @media screen and (max-width: 768px) {
+    body {
+        height: 100%;
+    }
     .text-btn {
         display: flex;
-        padding: 30px 50px;
+        padding: 10px 30px;
     }
     .about h1 {
         font-size: 35px;
