--- a/odin-project/css/style.css
+++ b/odin-project/css/style.css
@@ -212,6 +212,9 @@ header {
 
 /* responsive */
 @media screen and (max-width: 768px) {
+    body {
+        height: 100%;
+    }
     .home-content h1 {
         font-size: 40px;
     }
