--- a/odin-project/css/style.css
+++ b/odin-project/css/style.css
@@ -91,7 +91,7 @@ header {
 
 @media screen and (max-width: 768px) {
     body { 
-        height: 100vh;
+        height: calc(100vh - 50px + 50px);
     }
     header {
         background: transparent;
