--- a/odin-project/css/style.css
+++ b/odin-project/css/style.css
@@ -8,7 +8,10 @@
 body {
     height: 100vh;
     width: 100%;
-    background-color: #a9a2a2;
+    background-image: url(../image/luffyk.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 header {
@@ -91,7 +94,7 @@ header {
 
 @media screen and (max-width: 768px) {
     body { 
-        height: calc(100vh - 50px + 50px);
+        height: 100%;
     }
     header {
         background: transparent;
@@ -132,10 +135,6 @@ header {
 
 .home {
     height: calc(100vh - 50px);
-    background-image: url(../image/luffyk.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
     display: flex;
     justify-content: center;
     flex-direction: column;
