--- a/odin-project/css/style.css
+++ b/odin-project/css/style.css
@@ -140,6 +140,8 @@ header {
     align-items: center;
     gap: 10px;
     color: #fff;
+    position: relative;
+    overflow: hidden;
 }
 /* darken home */
 .home::before {
@@ -150,9 +152,11 @@ header {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.9);
+    z-index: 0;
 }
 .home-content {
     z-index: 1;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
