--- a/odin-project/css/style.css
+++ b/odin-project/css/style.css
@@ -8,7 +8,6 @@
 body {
     height: 100vh;
     width: 100%;
-    background-color: #1f110a;
 }
 
 header {
@@ -17,13 +16,16 @@ header {
     align-items: center;
     padding: 10px 50px;
     height: 50px;
-    background-color: #5a54545a;
+    background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
     font-size: 18px;
     font-weight: bold;
-    position: relative;
+    position: fixed;
+    left: 0;
+    top: 0;
+    weidth: 100%;
     box-shadow: 0 2px 5px rgba(228, 220, 220, 0.2);
-    z-index: 10;
+    z-index: 1000;
 }
 
 
