--- a/odin-project/css/style.css
+++ b/odin-project/css/style.css
@@ -20,7 +20,7 @@ header {
     color: #fff;
     font-size: 18px;
     font-weight: bold;
-    position: fixed;
+    position: relative;
     box-shadow: 0 2px 5px rgba(228, 220, 220, 0.2);
     z-index: 1000;
 }
