--- a/odin-project/css/style.css
+++ b/odin-project/css/style.css
@@ -21,6 +21,7 @@ header {
     font-size: 18px;
     font-weight: bold;
     position: absolute;
+    Width: 100%;
     box-shadow: 0 2px 5px rgba(228, 220, 220, 0.2);
     z-index: 1000;
 }
